--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ ul {
     color: white;
     /* box-shadow: 0 2px 5px 2px rgba(0,0,0,0.19); */
 }
-
+/* 
 ul:hover {
     width: 160px;
-}
+} */
 
 li div:hover {
     background: #343943;
@@ -128,4 +128,16 @@ li {
 .item:hover {
     background: grey !important;
     cursor: pointer;
+}
+
+/* Skills Area Styling */
+.circleContainer {
+    display: flex;
+}
+
+.circle {
+    background: grey;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
 }
