--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*General Element Styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
     font-family: 'Lato', sans-serif;
-}
-
-body {
-    margin: 0;
-    height: 200vh;
-    background: #f6f6f6;
 }
 
 h2 {
@@ -17,9 +17,8 @@ h2 {
 .content {
     margin: 0 auto;
     width: 50%;
-    padding: 130px 50px;
-    background: white;
-    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
+    height: 100vh;
+    padding-top: 100px;
 }
 
 /* Top Nav Styling */
@@ -35,7 +34,7 @@ nav h4 {
 nav { 
     display: flex;
     position: fixed;
-    width: 90%;
+    width: 100%;
     background: #343943;
     z-index: 1;
     color: #fff;
@@ -55,7 +54,8 @@ li {
 }
 
 li:hover {
-    background: #f6f6f6;
+    background: #05c0f1;
+    opacity: 0.8;
     color: #343943 !important;
     cursor: pointer;
 }
@@ -102,24 +102,34 @@ ul {
     width: 160px;
 } */
 
-/* Projects Area Styling */
-.container {
-    display: flex;
-    background-color: #f6f6f6;
-    padding: 50px;
-    margin: 0 auto;
+
+/* Contents Area Styling */
+/* About */
+.about {
+    background: linear-gradient(135deg, rgb(208, 208, 255) 0%, rgba(255,210,210,1) 100%);
 }
 
-.altContainer {
+/* Projects */
+.projects {
+    background: linear-gradient(185deg, rgb(83, 66, 94) 0%, rgb(53, 55, 83)0%);
+    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
+}
+
+.projects > .content {
+    transition: all 0.5s;
+    transform: translateY(50px);
+    opacity: 0;
+}
+
+.container, .altContainer {
     display: flex;
-    background-color: #f6f6f6;
-    padding: 50px;
+    padding: 10px 0;
     margin: 0 auto;
 }
 
 .altItem {
-    height: 300px;
-    line-height: 300px;
+    height: 500px;
+    line-height: 500px;
 }
 
 .item, .altItem {
@@ -135,11 +145,15 @@ ul {
 }
 
 .item:hover {
-    background: grey !important;
+    background: #05c0f1 !important;
     cursor: pointer;
 }
 
-/* Skills Area Styling */
+/* Skills */
+.skills {
+    background: linear-gradient(15deg, rgb(235, 255, 253) 0%, rgb(255, 241, 210) 100%);
+}
+
 .circleContainer {
     display: flex;
 }
@@ -149,4 +163,10 @@ ul {
     height: 10px;
     width: 10px;
     border-radius: 50%;
+}
+
+/* Contact */
+.contact {
+    background: linear-gradient(75deg, rgb(42, 128, 119) 0%, rgb(136, 106, 41)100%);
+    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
 }
