--- a/style.css
+++ b/style.css
@@ -16,157 +16,334 @@ h2 {
 
 .content {
     margin: 0 auto;
-    width: 50%;
     height: 100vh;
-    padding-top: 100px;
 }
 
 /* Top Nav Styling */
-nav h1 {
+h1 {
     font-size: 28px;
     margin: 0;
 }
 
-nav h4 {
+h4 {
     margin: 0;
 }
 
-nav { 
-    display: flex;
+ul {
     position: fixed;
     width: 100%;
-    background: #343943;
-    z-index: 1;
+    list-style-type: none;
+    margin: 0;
+    padding: 10px 100px;
     color: #fff;
     box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
-    padding: 10px 100px;
-    transition: all 0.1s;
-}
-
-.navitems {
+    background: #343943;
     display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    z-index: 1;
 }
 
 li {
-    padding: 0 120px;
-    transition: all 0.1s;
+    transition: all 0.25s;
     color: #fff;
-}
-
-li:hover {
-    background: #05c0f1;
-    opacity: 0.8;
-    color: #343943 !important;
-    cursor: pointer;
-}
-
-li div {
-    display: block;
+    float: right;
     text-align: center;
     text-decoration: none;
     font-size: 14px;
     transition: all 0.1s;
-    line-height: 53px;
-    width: 100px;
+    margin: 10px;
+}
+
+ul > li:nth-child(1) {
+    flex-basis: 250px;
+    text-align: left;
+}
+
+li > div:hover {
+	background: #f6f6f6;
+    color: #343943 !important;
+    cursor: pointer;
+}
+
+li > div {
+    line-height: 50px;
+    border-radius: 4px;
 }
 
 .highlight {
     transition: all 0.2s;
     background: #05c0f1;
-    left: 0;
     z-index: -1;
     position: absolute;
-    width: 340px;
-    height: 53px;
-/*     box-shadow: inset 0 2px 5px 1px rgba(0,0,0,0.19); */
+    height: 50px;
+    width: 338.281px;
+    top: 20px;
+    left: 380px;
+    border-radius: 4px;
 }
 
-ul {
-    list-style-type: none;
-    display: inline-flex;
-    padding-inline-start: 120px;
-    /* background: aliceblue; */
-    margin: 0;
-    /* padding: 20vh 0;
-    overflow: hidden;
-    position: fixed;
-    width: 80px;
-    height: 100vh;
-    background: #f6f6f6;
-    transition: width 0.2s;
-    color: white; */
-    /* box-shadow: 0 2px 5px 2px rgba(0,0,0,0.19); */
+/* Footer Styling */
+footer {
+    height: 73px;
+    background: #343943;
+    color: white;
 }
-
-/* ul:hover {
-    width: 160px;
-} */
-
 
 /* Contents Area Styling */
 /* About */
 .about {
-    background: linear-gradient(135deg, rgb(208, 208, 255) 0%, rgba(255,210,210,1) 100%);
+background: #fc5185;
+}
+
+.abt {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    padding: 250px;
+    }
+
+.abt > h2 {
+    font-size: 100px;
+    padding: 0 0 80px 0;
+}
+
+.abt > p {
+    font-size: 18px;
+    line-height: 30px;
 }
 
 /* Projects */
 .projects {
-    background: linear-gradient(185deg, rgb(83, 66, 94) 0%, rgb(53, 55, 83)0%);
-    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
+background: #364f6b;
 }
 
-.projects > .content {
-    transition: all 0.5s;
-    transform: translateY(50px);
-    opacity: 0;
+.prjt {
+display: flex;
+flex-flow: column nowrap;
+justify-content: center;
+padding: 150px 250px;
 }
 
-.container, .altContainer {
-    display: flex;
-    padding: 10px 0;
-    margin: 0 auto;
+.prjt h2 {
+padding: 0 0 20px 0;
+font-size: 40px;
+color: #fff;
 }
 
-.altItem {
-    height: 500px;
-    line-height: 500px;
+.container {
+display: flex;
+margin: 0 auto;
+width: 100%;
+justify-content: space-between;
+gap: 20px;
+}
+
+.altContainer {
+display: flex;
+background: #afa;
+width: 100%;
+flex-basis: 500px;
+align-items: center;
+justify-content: center;
+border-radius: 4px;
+margin-top: 20px;
 }
 
 .item, .altItem {
-    width: 100%;
-    background-color: rgb(150, 70, 70);
-    text-align: center;
-    color: white;
-    font-size: 24px;
-    border-radius: 10px;
-    transition: all 0.2s;
-    padding: 5px;
-    margin: 5px;
+padding: 10px;
+width: 100%;
+height: 100%;
+text-align: center;
+color: white;
+font-size: 24px;
+transition: all 0.2s;
+border-radius: 4px;
+}
+
+.item {
+background: #bda;
 }
 
 .item:hover {
-    background: #05c0f1 !important;
-    cursor: pointer;
+background: #05c0f1 !important;
+cursor: pointer;
 }
 
 /* Skills */
 .skills {
-    background: linear-gradient(15deg, rgb(235, 255, 253) 0%, rgb(255, 241, 210) 100%);
+background: #43dde6;
 }
 
-.circleContainer {
-    display: flex;
+.skl {
+display: flex;
+flex-flow: column nowrap;
+justify-content: center;
+padding: 150px 450px;
 }
 
-.circle {
-    background: grey;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
+.skl h2 {
+padding: 0 0 20px 0;
+font-size: 40px;
+color: #000;
 }
+
+.bar {
+display: flex;
+width: 100%;
+height: 40px;
+margin: 20px 0;
+}
+
+.skillName {
+align-items: flex-start;
+min-width: 100px;
+line-height: 40px;
+}
+
+.midBar {
+background: #ff6e9a;
+border-top-left-radius: 4px;
+border-bottom-left-radius: 4px;
+}
+
+.percent {
+background: #fff;
+align-items: flex-end;
+padding: 0 10px;
+text-align: right;
+min-width: 50px;
+border-top-right-radius: 4px;
+border-bottom-right-radius: 4px;
+line-height: 40px;
+}
+
 
 /* Contact */
 .contact {
-    background: linear-gradient(75deg, rgb(42, 128, 119) 0%, rgb(136, 106, 41)100%);
-    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
+background: #f0f0f0;
+}
+
+.cnt {
+display: flex;
+flex-flow: column nowrap;
+justify-content: center;
+padding: 150px 500px;
+}
+
+.cnt h2 {
+padding: 0 0 20px 0;
+font-size: 40px;
+color: #000;
+}
+
+.cnt label {
+width: 100%;
+font-size: 18px;
+}
+
+.cnt input[type=submit] {
+width: 30%;
+font-size: 18px;
+float: right;
+padding: 8px 10px;
+border: 2px solid #343943;
+outline: none;
+cursor: pointer;
+transition: all 0.5s;
+border-radius: 4px;
+}
+
+.cnt input[type=submit]:hover {
+background: #343943;
+border-color: #343943;
+color: #fff;
+}
+
+.cnt input[type=text], textarea {
+width: 100%;
+font-size: 18px;
+margin: 10px 0 20px 0;
+outline: none;
+border: 2px solid white;
+padding: 12px 12px;
+border-radius: 4px;
+}
+
+.cnt textarea {
+height: 200px;
+}
+
+.cnt input[type=text]:focus, textarea:focus {
+border: 2px solid #343943;
+}
+
+@media (max-width: 1280px) {
+    .skl {
+        padding: 150px 350px;
+    }
+    
+    .cnt {
+        padding: 150px 350px;
+    } 
+}
+
+@media (max-width: 768px) {
+    /* Nav media */
+    ul {
+    	justify-content: center;
+    }
+    
+    ul > li:nth-child(n+2) {
+    	display: none;
+    }
+    
+    ul > li:nth-child(1) {
+    	text-align: center;
+    }
+
+    .highlight {
+        transition: all 0.2s;
+        background: #05c0f1;
+        z-index: -1;
+        position: absolute;
+        left: 0px;
+        width: 100px;
+        height: 4px;
+        top: 87px;
+    }
+
+    /* About media */
+    .abt {
+        padding: 150px;
+    }  
+    
+    .abt > h2 {
+        font-size:75px;
+        padding: 0 0 50px 0;
+    }
+  
+    .abt > p {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    /* Projects Media */ 
+    .container {
+        flex-flow: column nowrap;
+    }  
+    
+    .prjt > .altContainer {
+        display: none;
+    }
+
+    /* Skills Media */
+    .skl {
+        padding: 150px 150px;
+    } 
+
+    /* Contact Media */
+    .cnt {
+        padding: 150px 150px;
+    }
 }
