--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ h2 {
 .content {
     margin: 0 auto;
     height: 100vh;
+    transition: all 1s;
+}
+
+img {
+    max-width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+    transition: all 2s;
 }
 
 /* Top Nav Styling */
@@ -51,8 +61,8 @@ li {
     text-align: center;
     text-decoration: none;
     font-size: 14px;
-    transition: all 0.1s;
     margin: 10px;
+    max-width: 338px;
 }
 
 ul > li:nth-child(1) {
@@ -77,10 +87,9 @@ li > div {
     z-index: -1;
     position: absolute;
     height: 50px;
-    width: 338.281px;
     top: 20px;
-    left: 380px;
     border-radius: 4px;
+    left: 200px;
 }
 
 /* Footer Styling */
@@ -101,6 +110,8 @@ background: #fc5185;
     flex-flow: column nowrap;
     justify-content: center;
     padding: 250px;
+  transform: translateY(50px);
+opacity: 0;
     }
 
 .abt > h2 {
@@ -123,6 +134,8 @@ display: flex;
 flex-flow: column nowrap;
 justify-content: center;
 padding: 150px 250px;
+transform: translateY(50px);
+opacity: 0;
 }
 
 .prjt h2 {
@@ -151,18 +164,18 @@ margin-top: 20px;
 }
 
 .item, .altItem {
-padding: 10px;
 width: 100%;
 height: 100%;
 text-align: center;
 color: white;
-font-size: 24px;
+font-size: 100%;
 transition: all 0.2s;
 border-radius: 4px;
 }
 
 .item {
 background: #bda;
+padding: 10px;
 }
 
 .item:hover {
@@ -180,6 +193,8 @@ display: flex;
 flex-flow: column nowrap;
 justify-content: center;
 padding: 150px 450px;
+  transform: translateY(50px);
+opacity: 0;
 }
 
 .skl h2 {
@@ -205,6 +220,8 @@ line-height: 40px;
 background: #ff6e9a;
 border-top-left-radius: 4px;
 border-bottom-left-radius: 4px;
+transition: all 1s;
+transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .percent {
@@ -216,6 +233,8 @@ min-width: 50px;
 border-top-right-radius: 4px;
 border-bottom-right-radius: 4px;
 line-height: 40px;
+transition: all 1s;
+transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 
@@ -229,6 +248,8 @@ display: flex;
 flex-flow: column nowrap;
 justify-content: center;
 padding: 150px 500px;
+  transform: translateY(50px);
+opacity: 0;
 }
 
 .cnt h2 {
@@ -331,7 +352,11 @@ border: 2px solid #343943;
     /* Projects Media */ 
     .container {
         flex-flow: column nowrap;
-    }  
+    }
+
+    .prjt {
+        padding: 150px 150px;
+    }
     
     .prjt > .altContainer {
         display: none;
