--- a/style.css
+++ b/style.css
@@ -10,365 +10,57 @@ html {
     font-family: 'Lato', sans-serif;
 }
 
-h2 {
-    margin-top: 0;  
-}
-
-.content {
-    margin: 0 auto;
-    height: 100vh;
-    transition: all 1s;
-}
-
-img {
-    max-width: 100%;
-    max-height: 500px;
-    object-fit: cover;
-    display: block;
-    margin: 0 auto;
-    transition: all 2s;
-}
-
 /* Top Nav Styling */
-h1 {
-    font-size: 28px;
-    margin: 0;
-}
-
-h4 {
-    margin: 0;
-}
-
-ul {
+header {
     position: fixed;
     width: 100%;
-    list-style-type: none;
-    margin: 0;
     padding: 10px 100px;
     color: #fff;
     box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
     background: #343943;
     display: flex;
-    flex-wrap: nowrap;
     justify-content: space-between;
-    z-index: 1;
 }
 
-li {
-    transition: all 0.25s;
-    color: #fff;
-    float: right;
-    text-align: center;
+ul {
+    list-style-type: none;
+    display: flex;
+    place-items: center;
+}
+
+li a {
+    display: block;
     text-decoration: none;
-    font-size: 14px;
-    margin: 10px;
-    max-width: 338px;
+    margin: 10px 20px;
+    padding: 6px;
+    color: #fff;
+    position: relative;
 }
 
-ul > li:nth-child(1) {
-    flex-basis: 250px;
-    text-align: left;
-}
-
-li > div:hover {
-	background: #f6f6f6;
-    color: #343943 !important;
-    cursor: pointer;
-}
-
-li > div {
-    line-height: 50px;
-    border-radius: 4px;
-}
-
-.highlight {
-    transition: all 0.2s;
-    background: #05c0f1;
-    z-index: -1;
+li a::after {
+    width: 0;
+    height: 4px;
+    content: '';
+    background-color: rgb(0, 174, 239);
     position: absolute;
-    height: 50px;
-    top: 20px;
-    border-radius: 4px;
-    left: 200px;
+    display: block;
+    transition: all 0.2s;
+    bottom: -5px;
+    left: 0;
+    border-radius: 1px;
+}
+
+li a:hover::after {
+    width: 100%;
 }
 
 /* Footer Styling */
 footer {
-    height: 73px;
+    width: 100%;
+    height: 50px;
     background: #343943;
     color: white;
-}
-
-/* Contents Area Styling */
-/* About */
-.about {
-background: #fc5185;
-}
-
-.abt {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    padding: 250px;
-  transform: translateY(50px);
-opacity: 0;
-    }
-
-.abt > h2 {
-    font-size: 100px;
-    padding: 0 0 80px 0;
-}
-
-.abt > p {
-    font-size: 18px;
-    line-height: 30px;
-}
-
-/* Projects */
-.projects {
-background: #364f6b;
-}
-
-.prjt {
-display: flex;
-flex-flow: column nowrap;
-justify-content: center;
-padding: 150px 250px;
-transform: translateY(50px);
-opacity: 0;
-}
-
-.prjt h2 {
-padding: 0 0 20px 0;
-font-size: 40px;
-color: #fff;
-}
-
-.container {
-display: flex;
-margin: 0 auto;
-width: 100%;
-justify-content: space-between;
-gap: 20px;
-}
-
-.altContainer {
-display: flex;
-background: #afa;
-width: 100%;
-flex-basis: 500px;
-align-items: center;
-justify-content: center;
-border-radius: 4px;
-margin-top: 20px;
-}
-
-.item, .altItem {
-width: 100%;
-height: 100%;
-text-align: center;
-color: white;
-font-size: 100%;
-transition: all 0.2s;
-border-radius: 4px;
-}
-
-.item {
-background: #bda;
-padding: 10px;
-}
-
-.item:hover {
-background: #05c0f1 !important;
-cursor: pointer;
-}
-
-/* Skills */
-.skills {
-background: #43dde6;
-}
-
-.skl {
-display: flex;
-flex-flow: column nowrap;
-justify-content: center;
-padding: 150px 450px;
-  transform: translateY(50px);
-opacity: 0;
-}
-
-.skl h2 {
-padding: 0 0 20px 0;
-font-size: 40px;
-color: #000;
-}
-
-.bar {
-display: flex;
-width: 100%;
-height: 40px;
-margin: 20px 0;
-}
-
-.skillName {
-align-items: flex-start;
-min-width: 100px;
-line-height: 40px;
-}
-
-.midBar {
-background: #ff6e9a;
-border-top-left-radius: 4px;
-border-bottom-left-radius: 4px;
-transition: all 1s;
-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.percent {
-background: #fff;
-align-items: flex-end;
-padding: 0 10px;
-text-align: right;
-min-width: 50px;
-border-top-right-radius: 4px;
-border-bottom-right-radius: 4px;
-line-height: 40px;
-transition: all 1s;
-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-
-/* Contact */
-.contact {
-background: #f0f0f0;
-}
-
-.cnt {
-display: flex;
-flex-flow: column nowrap;
-justify-content: center;
-padding: 150px 500px;
-  transform: translateY(50px);
-opacity: 0;
-}
-
-.cnt h2 {
-padding: 0 0 20px 0;
-font-size: 40px;
-color: #000;
-}
-
-.cnt label {
-width: 100%;
-font-size: 18px;
-}
-
-.cnt input[type=submit] {
-width: 30%;
-font-size: 18px;
-float: right;
-padding: 8px 10px;
-border: 2px solid #343943;
-outline: none;
-cursor: pointer;
-transition: all 0.5s;
-border-radius: 4px;
-}
-
-.cnt input[type=submit]:hover {
-background: #343943;
-border-color: #343943;
-color: #fff;
-}
-
-.cnt input[type=text], textarea {
-width: 100%;
-font-size: 18px;
-margin: 10px 0 20px 0;
-outline: none;
-border: 2px solid white;
-padding: 12px 12px;
-border-radius: 4px;
-}
-
-.cnt textarea {
-height: 200px;
-}
-
-.cnt input[type=text]:focus, textarea:focus {
-border: 2px solid #343943;
-}
-
-@media (max-width: 1280px) {
-    .skl {
-        padding: 150px 350px;
-    }
-    
-    .cnt {
-        padding: 150px 350px;
-    } 
-}
-
-@media (max-width: 768px) {
-    /* Nav media */
-    ul {
-    	justify-content: center;
-    }
-    
-    ul > li:nth-child(n+2) {
-    	display: none;
-    }
-    
-    ul > li:nth-child(1) {
-    	text-align: center;
-    }
-
-    .highlight {
-        transition: all 0.2s;
-        background: #05c0f1;
-        z-index: -1;
-        position: absolute;
-        left: 0px;
-        width: 100px;
-        height: 4px;
-        top: 87px;
-    }
-
-    /* About media */
-    .abt {
-        padding: 150px;
-    }  
-    
-    .abt > h2 {
-        font-size:75px;
-        padding: 0 0 50px 0;
-    }
-  
-    .abt > p {
-        font-size: 14px;
-        line-height: 24px;
-    }
-
-    /* Projects Media */ 
-    .container {
-        flex-flow: column nowrap;
-    }
-
-    .prjt {
-        padding: 150px 150px;
-    }
-    
-    .prjt > .altContainer {
-        display: none;
-    }
-
-    /* Skills Media */
-    .skl {
-        padding: 150px 150px;
-    } 
-
-    /* Contact Media */
-    .cnt {
-        padding: 150px 150px;
-    }
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
 }
