--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /*General Element Styling */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,60 +10,280 @@
 
 html {
     scroll-behavior: smooth;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', serif;
 }
 
-/* Top Nav Styling */
-header {
-    position: fixed;
-    width: 100%;
-    padding: 10px 100px;
-    color: #fff;
-    box-shadow: 0 1px 5px 2px rgba(0,0,0,0.19);
-    background: #343943;
+.titlePage, .aboutPage, .timelinePage, .projectsPage, .timerPage {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
 }
 
-ul {
-    list-style-type: none;
+.titlePage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background-image: url('./img/bg.jpg');
+    background-color: #394e75;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.title {
+    justify-content: center;
+    align-items: center;
+    color: #111;
+    padding: 10px;
+    font-size: 64px;
+    /* background-image: url('./img/bg.jpg');
+    background-size: cover; */
+    filter: invert(0);
+    font-weight: bold;
+    background-color: rgb(243, 134, 15);
+    overflow: hidden;
+    height: 174px;
+}
+
+.title > h1 {
+    transition: transform 0.5s;
+}
+
+.title:hover h1 {
+    transform: translateY(-154px)
+}
+
+.seeMore {
+    position: absolute;
+    bottom: 100px;
+    padding: 10px;
+    opacity: 0.4;
+    transition: all 0.2s;
+    cursor: pointer;
+    color: #fff;
+}
+
+.seeMore:hover {
+    transform: translateY(2px);
+    opacity: 0.8;
+}
+
+.aboutPage {
+    height: 60vh;
+    background-color: #fff;
+}
+
+.about {
+    width: 60%;
     display: flex;
     place-items: center;
 }
 
-li a {
-    display: block;
-    text-decoration: none;
-    margin: 10px 20px;
-    padding: 6px;
-    color: #fff;
+.about img {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+    filter: grayscale(1);
+}
+
+.aboutContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 220px;
+    padding: 30px;
+    overflow: hidden;
+}
+
+.aboutContent h4 {
+    font-family: 'Source Serif Pro';
+    font-weight: normal;
+}
+
+.projectsPage {
+    height: auto;
+    /* height: 100vh; */
+    background-color: #fff;
+    /* background-image: url('./img/bg3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;*/
+    padding: 0 50px 150px 50px;
+    align-items: flex-start;
+}
+
+.projectsPage > h1 {
+    font-size: 144px;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    color: #555;
+    padding-left: 150px
+}
+
+.projects {
+    display: flex;
+    max-width: 1480px;
+    margin: 0 auto;
+    overflow: hidden;
+    object-fit: cover;
+    flex-direction: column;
+}
+
+.projectContainer {
+    width: 100%;
+    transition: all 0.1s;
     position: relative;
 }
 
-li a::after {
-    width: 0;
-    height: 4px;
-    content: '';
-    background-color: rgb(0, 174, 239);
+.projectContainer:hover {
+    opacity: 1;
+}
+
+.projectContainer:hover .overlay{
+    opacity: 0.7;
+}
+
+.overlay {
     position: absolute;
-    display: block;
-    transition: all 0.2s;
-    bottom: -5px;
-    left: 0;
-    border-radius: 1px;
-}
-
-li a:hover::after {
-    width: 100%;
-}
-
-/* Footer Styling */
-footer {
-    width: 100%;
-    height: 50px;
-    background: #343943;
-    color: white;
-    position: fixed;
-    z-index: 1;
+    top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    flex-direction: column;
+}
+
+.overlay > div > i {
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.overlay > div > i:hover {
+    transform: translateY(-2px);
+}
+
+.timelinePage {
+    background-image: url('./img/bg2.jpg');
+    background-color: #394e75;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 150vh
+}
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #fff
+}
+
+.timeline h1::after {
+    position: relative;
+    content: '';
+    width: 50%;
+    display: block;
+    height: 4px;
+    background-color: #fff;
+    bottom: -10px;
+    left: 25%;
+}
+
+.line {
+    width: 5px;
+    height: 75%;
+    background-color: #fff;
+    border-radius: 2px 2px 0 0;
+}
+
+.line::after {
+    position: relative;
+    content: '';
+    width: 20px;
+    height: 20px;
+    display: block;
+    background-color: transparent;
+    border-radius: 50%;
+    border: white solid 5px;
+    top: 100%;
+    right: 250%;
+}
+
+.columns {
+    height: 100%;
+    position: absolute;
+    display: flex;
+}
+
+.lineItem > h4 {
+    background-color: #fff;
+    margin: 20px;
+    height: 100px;
+    width: 60%;
+    transition: all 0.4s;
+    opacity: 0;
+}
+
+.right {
+    top: 30%;
+    align-items: flex-start;
+}
+
+.left {
+    top: 10%;
+    align-items: flex-end;
+}
+
+.left, .right {
+    position: relative;
+    flex: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.left > h4 {
+    transform: translateX(-50px);
+    clip-path: polygon(0 0, 90% 0, 90% 35%, 100% 50%, 90% 65%, 90% 100%, 0 100%);
+}
+
+.right > h4 {
+    transform: translateX(50px);
+    clip-path: polygon(10% 0, 100% 0, 100% 100%, 10% 100%, 10% 65%, 0 50%, 10% 35%);
+}
+
+.timerPage {
+    height: 60vh;
+}
+
+.timer {
+    display: flex;
+    flex-direction: column;
+    color: #666;
+    width: 300px;
+}
+
+.timer > h2, .timer > h1, .timer > h5 {
+    padding: 10px 0;
+}
+
+.timer > h5 {
+    text-align: right;
+    font-size: 12px;
+}
+
+.timer h2 {
+    padding: 0 20px;
+    font-weight: bold;
+    font-size: 46px;
 }
