--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ html {
     display: flex;
 }
 
-.overlayTitle \{
+.overlayTitle {
     display: flex;
     justify-content: space-between;
     align-items: center;
